test plan, smoke tests, out of date examples